<resources>
    <string name="app_name">Get Space</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity">Activity</string>
    <string name="title_chat">Messenger</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_mail">Mail</string>
    <string name="title_main">Space</string>
</resources>
