<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_messenger"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_space"
        android:icon="@drawable/ic_nav_saturn"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_mail"
        android:icon="@drawable/ic_nav_mail"
        android:title="@string/title_mail" />

</menu>
